--- a/index.html
+++ b/index.html
@@ -3,14 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Teoh Kah Lok</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Theo's healthy recipes</h1>
+    <img class="gif" src="./images/sunnyfication.gif" alt="a nigger cooking">
+
+    <div class="block">
+   
     <ul>
-   <li> <a  href="recipes/teochewfish.html">Teochewfish</a>
-    <li><a href="recipes/oatmeal-with-egg-and-veggies.html">Oatmeal with egg and veggies</a></li>
-    <li><a href="recipes/whole-wheat-tuna-avocado-toast.html">Whole wheat tuna avocado toast</a></li>
+        <li class="recipe"><a href="recipes/teochewfish.html">Teochewfish</a></li>
+        <li class="recipe"><a href="recipes/oatmeal-with-egg-and-veggies.html">Oatmeal with egg and veggies</a></li>
+        <li class="recipe"><a href="recipes/whole-wheat-tuna-avocado-toast.html">Whole wheat tuna avocado toast</a></li>
     </ul>
+
+    </div>
+
+
+
 </body>
 </html>
